<resources>
  <string name="app_name">FIAM UI</string>
  <string name="message_title">Message title</string>
  <string name="regular_length">Regular</string>
  <string name="long_length">Long</string>
  <string name="no_length">No Body</string>
  <string name="image_url">Image url</string>
  <string name="action_button_text">Action button text</string>
  <string name="secondary_action_button_text">Secondary Action button text</string>
  <string name="action_button_url">Action button url</string>
  <string name="fiam_ui_demo">FIAM UI Demo</string>
  <string name="fiam_type">Fiam type</string>
  <string name="start">Start</string>
  <string name="modal">Modal</string>
  <string name="banner">Banner</string>
  <string name="image">Image</string>
  <string name="card">Card</string>
  <string name="default_image_url">https://unsplash.it/800/800</string>
  <string name="body_text_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    Aliquam at ipsum augue. In et dui at justo scelerisque porta quis id arcu. Nam aliquam dolor
    ante, id vestibulum augue dapibus non. Proin aliquet tortor nec neque pulvinar pretium sed id
    sem. Vivamus sit amet metus nec arcu hendrerit blandit id at sapien. Donec luctus feugiat massa
    rutrum ultricies. Duis bibendum interdum placerat. Maecenas sed molestie ex. Duis mattis luctus
    lacus eget auctor. Aliquam ultricies, leo in bibendum interdum, ipsum est pharetra odio,
    fermentum semper lorem ipsum nec ex. Class aptent taciti sociosqu ad litora torquent per
    conubia nostra, per inceptos himenaeos.
    Nam fermentum augue nec velit mollis, eu hendrerit libero luctus. Aliquam erat volutpat.
    Donec quis nulla et turpis mattis posuere</string>
  <string name="body_text_normal">We noticed that some of your wishlist items went on sale recently. Take a look!</string>
  <string name="no_body_text"></string>
  <string name="short_message_title">Hi thair</string>
  <string name="default_message_title">Your wishlist items are on sale!</string>
  <string name="view_wishlist">Lorem Ipsum</string>
  <string name="button_text_cancel">Cancel</string>
  <string name="test_activity_from_where_fiam_launches">Test activity from where fiam launches</string>
  <string name="color1">#00FF00</string>
  <string name="colo2">#000000</string>
  <string name="color3">#AA5B81</string>
  <string name="color4">#000000</string>
</resources>