<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.firebase.fiamui.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:paddingBottom="32dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/fiam_ui_demo" />

            <Button
                android:id="@+id/start"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="@string/start" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/fiam_type" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/modal_fiam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/modal" />

                <RadioButton
                    android:id="@+id/banner_fiam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/banner" />

                <RadioButton
                    android:id="@+id/image_fiam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image" />

                <RadioButton
                    android:id="@+id/card_fiam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/message_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/message_title"
                    android:text="@string/default_message_title" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="Use body text" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/normal_body_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/regular_length" />

                <RadioButton
                    android:id="@+id/long_body_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/long_length" />

                <RadioButton
                    android:id="@+id/no_body_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_length" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:weightSum="2.0">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/image_width"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Image Width"
                        android:inputType="number"
                        android:text="800" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/image_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Image Height"
                        android:inputType="number"
                        android:text="800" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:weightSum="2.0">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/landscape_image_width"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Landscape Width (card)"
                        android:inputType="number"
                        android:text="800" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/landscape_image_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Landscape Height (card)"
                        android:inputType="number"
                        android:text="800" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/action_button_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/action_button_text"
                    android:text="@string/view_wishlist" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/action_button_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/action_button_url"
                    android:text="https://www.google.com" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/secondary_action_button_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/secondary_action_button_text"
                    android:text="@string/view_wishlist" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fiam_ttl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Time in seconds to show fiam"
                    android:inputType="number"
                    android:text="30" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="Colors"
                android:textSize="16sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/color_body_bg_container"
                style="@style/AppTheme.ColorContainer">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Body Background" />

                <View
                    android:id="@+id/color_body_bg_preview"
                    style="@style/AppTheme.ColorPreview"
                    android:background="#FAFAFA" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/color_body_text_container"
                style="@style/AppTheme.ColorContainer">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Body Text" />

                <View
                    android:id="@+id/color_body_text_preview"
                    style="@style/AppTheme.ColorPreview"
                    android:background="#000000" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/color_button_bg_container"
                style="@style/AppTheme.ColorContainer">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Button Background" />

                <View
                    android:id="@+id/color_button_bg_preview"
                    style="@style/AppTheme.ColorPreview"
                    android:background="@color/colorAccent" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/color_button_text_container"
                style="@style/AppTheme.ColorContainer">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Button Text" />

                <View
                    android:id="@+id/color_button_text_preview"
                    style="@style/AppTheme.ColorPreview"
                    android:background="#0000FF" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
